--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,10 +12,10 @@
 
     <div class="grid-container content">
       <p class="breadcrumb breadcrumb-default">
-      <%= link_to "INÍCIO", controller: "home", action: "index" %>
+      <%= link_to t('home'), controller: "home", action: "index" %>
        | <a href="#">ABOUT</a>
       </p>
-      <h1 class="title blackgrayfont grid-100">Sobre o Projeto</h1>
+      <h1 class="title blackgrayfont grid-100"><%= t('about_title') %></h1>
       <div class="">
         <div class="grid-100">
           <div class="od4d-about-video">
