W3CBrasil/OD4D#53 - English menu

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,37 +4,38 @@
     <% end %>
     <nav id="menu" class="menu floatRight">
       <ul>
-        <li><a href="">SOBRE A PLATAFORMA</a></li>
+        <li><a href=""><%= t('menu_1') %></a></li>
+        <li><a href=""><%= t('menu_2') %></a></li>
+        <li><a href=""><%= t('menu_3') %></a></li>
         <li>
-          <a class="dropdown" href="">COMO PARTICIPAR</a>
+          <a class="dropdown" href=""><%= t('menu_4') %></a>
           <ul class="submenu">
-              <li><a href="#">item 1</a></li>
-              <li><a href="#">item 2</a></li>
-              <li><a href="#">item 3</a></li>
+            <li><a href="#"><%= t('menu_4_1') %></a></li>
+            <li><a href="#"><%= t('menu_4_2') %></a></li>
           </ul>
         </li>
         <li>
-          <a class="dropdown" href="">UNIVERSO OPENDATA</a>
+          <a class="dropdown" href=""><%= t('menu_5') %></a>
           <ul class="submenu">
-              <li><a href="#">item 4</a></li>
-              <li><a href="#">item 5</a></li>
-              <li><a href="#">item 6</a></li>
+            <li><a href=""><%= t('menu_5_1') %></a></li>
+            <li><a href=""><%= t('menu_5_2') %></a></li>
+            <li><a href=""><%= t('menu_5_3') %></a></li>
+            <li><a href=""><%= t('menu_5_4') %></a></li>
           </ul>
         </li>
         <li>
-          <a class="dropdown" href="">CASOS PRÁTICOS</a>
+          <a class="dropdown" href=""><%= t('menu_3') %>USE CASES</a>
           <ul class="submenu">
-              <li><a href="#">item 8</a></li>
-              <li><a href="#">trilha sobre Privacidade</a></li>
-              <li><a href="#">item 7</a></li>
+              <li><a href="#"><%= t('menu_3') %>Projects</a></li>
+              <li><a href="#"><%= t('menu_3') %>Products</a></li>
           </ul>
         </li>
         <li>
-          <a class="dropdown" href="">EVENTOS</a>
+          <a class="dropdown" href=""><%= t('menu_3') %>EVENTS</a>
           <ul class="submenu">
-              <li><a href="#">CURSOS</a></li>
-              <li><a href="#">CONCURSOS</a></li>
-              <li><a href="#">ENCONTROS</a></li>
+              <li><a href="#"><%= t('menu_3') %>Conferences</a></li>
+              <li><a href="#"><%= t('menu_3') %>Courses</a></li>
+              <li><a href="#"><%= t('menu_3') %>Contests</a></li>
           </ul>
         </li>
         <li><a href="/casein"><span class="login">LOGIN</span></a></li>
