--- a/app/views/articles/filter.html.erb
+++ b/app/views/articles/filter.html.erb
@@ -2,8 +2,6 @@
   <title>OD4D - <%= params[:field] + " - " + params[:term] %></title>
 <% end %>
 
-
-
   <article class="post-list grid-container main">
     <div class="container2">
       <div class="container1">
@@ -15,7 +13,8 @@
           <h4 class="subtitle"><%= @description %></h4>
 
           <ul class="list-post-ul">
-    		<% @articles.each do |article| %>
+        <% if @articles && @articles.size > 0 %>
+    		  <% @articles.each do |article| %>
     	        <li>
     	            <span class="category"><%= article.articleSection.first.upcase %></span>
     	            <%= link_to raw("<h3 class='title-item'>#{article.title}</h3>"), controller: "articles", action: "show", params: {uri: "#{article.url}"} %>
@@ -23,7 +22,10 @@
     	            	<%= link_to "[...] Leia mais", controller: "articles", action: "show", params: {uri: "#{article.url}"} %></p>
     	            <p class="post-fonte bgwhite">publicado em <%= article.datePublished.strftime("%d/%m/%Y") %> por <span class="semiboldfont600 blackgrayfont"><%= article.author %></span></p>
     	        </li>
-    		<% end %>
+    		  <% end %>
+        <% else %>
+          <li><span class="category">No articles could be found.</span><span style="color: #ffffff">No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.No articles could be found.</span></li>
+        <% end %>
           </ul>
         </section>
         <aside class="sharebar col1 grid-30">
