--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,38 +4,38 @@
     <% end %>
     <nav id="menu" class="menu floatRight">
       <ul>
-        <li><a href=""><%= t('menu_1') %></a></li>
-        <li><a href=""><%= t('menu_2') %></a></li>
-        <li><a href=""><%= t('menu_3') %></a></li>
+        <li><%= link_to t('menu_1'), {controller: "home", action: "index"} %></li>
+        <li><%= link_to t('menu_2'), {controller: "pages", action: "terms_and_conditions"} %></li>
+        <li><%= link_to t('menu_3'), {controller: "pages", action: "privacy_policy"} %></li>
         <li>
-          <a class="dropdown" href=""><%= t('menu_4') %></a>
+          <a class="dropdown" href="#"><%= link_to t('menu_4') %></a>
           <ul class="submenu">
-            <li><a href="#"><%= t('menu_4_1') %></a></li>
-            <li><a href="#"><%= t('menu_4_2') %></a></li>
+            <li><%= link_to t('menu_4_1'), {controller: "pages", action: "become_partner"} %></li>
+            <li><%= link_to t('menu_4_2'), {controller: "pages", action: "become_contributor"} %></li>
           </ul>
         </li>
         <li>
-          <a class="dropdown" href=""><%= t('menu_5') %></a>
+          <a class="dropdown" href="#"><%= t('menu_5') %></a>
           <ul class="submenu">
-            <li><a href=""><%= t('menu_5_1') %></a></li>
-            <li><a href=""><%= t('menu_5_2') %></a></li>
-            <li><a href=""><%= t('menu_5_3') %></a></li>
-            <li><a href=""><%= t('menu_5_4') %></a></li>
+            <li><%= link_to t('menu_5_1'), {controller: "learn", action: "concepts"} %></li>
+            <li><%= link_to t('menu_5_2'), {controller: "learn", action: "ref_material"} %></li>
+            <li><%= link_to t('menu_5_3'), {controller: "learn", action: "capacity_building"} %></li>
+            <li><%= link_to t('menu_5_4'), {controller: "learn", action: "glossary"} %></li>
           </ul>
         </li>
         <li>
-          <a class="dropdown" href=""><%= t('menu_3') %>USE CASES</a>
+          <a class="dropdown" href="#"><%= t('menu_6') %></a>
           <ul class="submenu">
-              <li><a href="#"><%= t('menu_3') %>Projects</a></li>
-              <li><a href="#"><%= t('menu_3') %>Products</a></li>
+              <li><%= link_to t('menu_6_1'), {controller: "articles", action: "filter", field: "articleSection", term: "Projects" }%></li>
+              <li><%= link_to t('menu_6_2'), {controller: "articles", action: "filter", field: "articleSection", term: "Products" }%></li>
           </ul>
         </li>
         <li>
-          <a class="dropdown" href=""><%= t('menu_3') %>EVENTS</a>
+          <a class="dropdown" href=""><%= t('menu_7') %></a>
           <ul class="submenu">
-              <li><a href="#"><%= t('menu_3') %>Conferences</a></li>
-              <li><a href="#"><%= t('menu_3') %>Courses</a></li>
-              <li><a href="#"><%= t('menu_3') %>Contests</a></li>
+              <li><%= link_to t('menu_7_1'), {controller: "articles", action: "filter", field: "articleSection", term: "Conferences"} %></li>
+              <li><%= link_to t('menu_7_2'), {controller: "articles", action: "filter", field: "articleSection", term: "Courses"} %></li>
+              <li><%= link_to t('menu_7_3'), {controller: "articles", action: "filter", field: "articleSection", term: "Contests"} %></li>
           </ul>
         </li>
         <li><a href="/casein"><span class="login">LOGIN</span></a></li>
