W3CBrasil/OD4D#53 - pairing w/ @alvarocavalcanti - add glossary page

--- a/app/views/learn/glossary.html.erb
+++ b/app/views/learn/glossary.html.erb
@@ -3,39 +3,56 @@
   <title>Open Data for Development - Glossary</title>
 <% end %>
 
-<article resource="<%= request.original_url %>" typeof="schema:Article">
-  <h1 property="schema:headline">Glossary</h1>
-  <meta property="schema:datePublished" content="2014-06-20"/>
+<article class="main post institucional" resource="<%= request.original_url %>" typeof="schema:Article">
+  <meta property="schema:datePublished" content="2014-09-29"/>
   <meta property="schema:inLanguage" content="en-US"/>
   <meta property="schema:copyrightHolder" content="W3C"/>
   <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
   <meta property="schema:keywords" content="glossary;od4d"/>
 
-  <p id="copyright">
-    <em>Copyright</em><br>Moral right, irrevocable and inalienable. It is an exclusive right of exploitation that a person has over its literary, artistic and scientific creations.
-  </p>
+  <div class="grid-container content">
+    <div class="grid-container content">
+    <h1 class="title blackgrayfont">Glossary</h1>
+      <div class="grid-100">
+        <div>
+          <div class="term-glossary">
+            <h3>Copyright</h3>
+            <p>Moral right, irrevocable and inalienable. It is an exclusive right of exploitation that a person has over its literary, artistic and scientific creations.
+          </p>
 
-  <p id="license">
-    <em>License</em><br>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.
-  </p>
+          <div class="term-glossary">
+            <h3>License</h3>
+            <p>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.
+          </p>
 
-  <p id="onthology">
-    <em>Onthology</em><br>Onthologies are a set of vocabularies that are able to describe an subject area. For instance an Onthology of Intelectual property, might include vocabularies to describe any form of text, media, etc. Article, Video, Audio, are examples of vocabularies that could be inside a Onthology called "Intelectual Property Onthology".
-  </p>
+          <div class="term-glossary">
+            <h3>Onthology</h3>
+            <p>Onthologies are a set of vocabularies that are able to describe an subject area. For instance an Onthology of Intelectual property, might include vocabularies to describe any form of text, media, etc. Article, Video, Audio, are examples of vocabularies that could be inside a Onthology called "Intelectual Property Onthology".
+          </p>
 
-  <p id="rdfa">
-    <em>RDFa (Resource Description Framework-in-attributes):</em><br>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.
-  </p>
+          <div class="term-glossary">
+            <h3>RDFa (Resource Description Framework-in-attributes):</h3>
+            <p>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.
+          </p>
 
-  <p id="semantic">
-    <em>Semantic</em><br>Semantic: Particular way of inferring facts or ideas from a word or phrase.
-  </p>
+          <div class="term-glossary">
+            <h3>Semantic</h3>
+            <p>Semantic: Particular way of inferring facts or ideas from a word or phrase.
+          </p>
 
-  <p id="uri">
-    <em>URI (Uniform Resource Identifier):</em><br>It is a short string that uniquely identifies a resource (service, page, document, email, encyclopedia, etc.). Usually these resources are accessible on a network or system. The URI can be Uniform Resource Locators (URLs), Uniform Resource Name (URN), or both (URL + URN).
-  </p>
+          <div class="term-glossary">
+            <h3>URI (Uniform Resource Identifier):</h3>
+            <p>It is a short string that uniquely identifies a resource (service, page, document, email, encyclopedia, etc.). Usually these resources are accessible on a network or system. The URI can be Uniform Resource Locators (URLs), Uniform Resource Name (URN), or both (URL + URN).
+          </p>
 
-  <p id="vocabulary">
-    <em>Vocabulary</em><br>Vocabularies are predefined terms for different Objects in certain subject areas, with this predefined vocabularies, applications/tools/other web sites that makes use of this data can better understand it when common and popular vocabularies are used.
-  </p>
+          <div class="term-glossary">
+            <h3>Vocabulary</h3>
+            <p>Vocabularies are predefined terms for different Objects in certain subject areas, with this predefined vocabularies, applications/tools/other web sites that makes use of this data can better understand it when common and popular vocabularies are used.
+          </p>
+
+        </div>
+      </div>
+    </div>
+    </div>
+
 </article>
