W3CBrasil/OD4D#53 - pairing w/ @alvarocavalcanti - add final images to home

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -147,14 +147,14 @@
         <%= t('featured_section').upcase %></a> <span class="semiboldfont">&gt;&gt;</span></h3>
       <div class="destaquegov grid-33">
           <h4 class="news-title-item title-item-destaque"><%= t('watch_out') %></h4>
-          <img src="<%= asset_path 'placeholder_destaque_maior.jpg' %>" alt="" />
+          <img src="<%= asset_path 'shutterstock_114997978-b.jpg' %>" alt="" />
           <h5 class="news-title-item"><%= t('featured_about_1').upcase %></h5>
           <p class="news-txt-larger"><a href=""><%= t('featured_article_1') %></a></p>
       </div>
 
       <div class="destaque2gov grid-33">
         <div class="destaquemenor">
-          <img src="<%= asset_path 'placeholder_destaque_menor.jpg' %>" alt="">
+          <img src="<%= asset_path 'shutterstock_173451446-b.jpg' %>" alt="">
           <h5 class="news-title-item"><%= t('featured_about_2').upcase %></h5>
           <p class="news-txt-larger"><a href=""><%= t('featured_article_2') %></a></p>
         </div>
@@ -211,7 +211,7 @@
       <div class="resp-tabs-container bggreen">
           <div class="text-tab clearfix">
             <div class="text-tab clearfix">
-              <img src="<%= asset_path 'img-casos.png' %>" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_1') %></h4>
               <p><%= t('cases_text_1') %></p>
               <a class="casos-praticos-link" href=""><%= t('cases_more_link') %></a>
@@ -219,28 +219,28 @@
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'img-casos.png' %>" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_2') %></h4>
               <p><%= t('cases_text_2') %></p>
             </div>
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'img-casos.png' %>" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_3') %></h4>
               <p><%= t('cases_text_3') %></p>
             </div>
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'img-casos.png' %>" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_4') %></h4>
               <p><%= t('cases_text_4') %></p>
             </div>
           </div>
           <div>
               <div class="text-tab clearfix">
-              <img src="<%= asset_path 'img-casos.png' %>" class="img-tab" />
+              <img src="<%= asset_path 'shutterstock_144889669-b.jpg' %>" class="img-tab" />
               <h4><%= t('cases_headline_5') %></h4>
               <p><%= t('cases_text_5') %></p>
             </div>
