W3CBrasil/OD4D#53 - pairing w/ @alvarocavalcanti - add partners images

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -264,9 +264,8 @@
       <h3 class="fontitalic thinfont"><%= t('partners_title') %></h3>
       <ul>
         <li><a href=""><img src="<%= asset_path 'coi.png' %>" /></a></li>
-        <li><a href=""><img src="<%= asset_path 'coi.png' %>" /></a></li>
-        <li><a href=""><img src="<%= asset_path 'coi.png' %>" /></a></li>
-        <li><a href=""><img src="<%= asset_path 'coi.png' %>" /></a></li>
+        <li><a href=""><img src="<%= asset_path 'ilda57px.png' %>" /></a></li>
+        <li><a href=""><img src="<%= asset_path 'oddc_partners.png' %>" /></a></li>
       </ul>
     </div>
   </section>
